# machine

./: .gitmodules  Cargo.toml  README.md  cargo_all.sh  rust-toolchain.toml
.github/workflows/: rust.yml
common/: Cargo.toml
common/ergot_util/: Cargo.toml
common/ergot_util/src/: lib.rs
common/ioboard_shared/: Cargo.toml
common/ioboard_shared/src/: commands.rs  lib.rs  yeet.rs
common/morse/examples/morse-wasm/: Cargo.toml  README.md  index.html
common/morse/examples/morse-wasm/.cargo/: config.toml
common/morse/examples/morse-wasm/src/: main.rs
common/morse/morse-core/: Cargo.toml
common/morse/morse-core/src/: lib.rs
common/morse/morse-macro/: Cargo.toml
common/morse/morse-macro/src/: lib.rs
common/morse/morse-tests/: Cargo.toml
common/morse/morse-tests/src/: lib.rs
common/operator_shared/: Cargo.toml
common/operator_shared/src/: camera.rs  commands.rs  common.rs  lib.rs
crates/experimentation-1/src/: main.rs
crates/experimentation-2/src/: main.rs
crates/ioboard/: Cargo.toml
experimentation/camera-enumeration-windows/: Cargo.toml
experimentation/camera-enumeration-windows/src/: main.rs
experimentation/cameraclient-1/: Cargo.toml
experimentation/cameraclient-1/src/: fps_stats.rs  main.rs
experimentation/cameraclient-ergot/: Cargo.toml
experimentation/cameraclient-ergot/src/: fps_stats.rs  main.rs
experimentation/cameraclient-tcp/: Cargo.toml
experimentation/cameraclient-tcp/src/: fps_stats.rs  main.rs
experimentation/camerastreamer-1/: Cargo.toml  ReadMe.md  _build.rs  build.rs
experimentation/camerastreamer-1/.cargo/: config.toml
experimentation/camerastreamer-1/src/: main.rs
experimentation/camerastreamer-ergot/: Cargo.toml  ReadMe.md  build.rs  rust-toolchain.toml
experimentation/camerastreamer-ergot-shared/: Cargo.toml
experimentation/camerastreamer-ergot-shared/src/: lib.rs
experimentation/camerastreamer-ergot/.cargo/: config.toml
experimentation/camerastreamer-ergot/src/: main.rs  plistext.txt
experimentation/camerastreamer-tcp/: Cargo.toml  ReadMe.md  build.rs
experimentation/camerastreamer-tcp/src/: main.rs
experimentation/experimentation-1/: Cargo.toml
experimentation/experimentation-1/src/: main.rs
experimentation/experimentation-2/: Cargo.toml
experimentation/experimentation-2/src/: main.rs
experimentation/media-rs-and-opencv/: Cargo.toml  README.md
experimentation/media-rs-and-opencv/src/: main.rs  watch_channel.rs
experimentation/opencv-camera-enumeration/: Cargo.toml
experimentation/opencv-camera-enumeration/src/: main.rs
experimentation/screen-13-cli-1/: Cargo.toml  README.md
experimentation/screen-13-cli-1/assets/: User Library-LQFP64_Grid_0_5.STEP
experimentation/screen-13-cli-1/src/: main.rs
experimentation/tracing-test/: Cargo.toml
experimentation/tracing-test/src/: main.rs
experimentation/videocapture-and-opencv/: Cargo.toml  README.md
experimentation/videocapture-and-opencv/src/: main.rs
experimentation/wgpu-cli-1/: Cargo.toml
experimentation/wgpu-cli-1/src/: main.rs  shader.wgsl
experimentation/wgpu-cli-2/: Cargo.toml  README.md
experimentation/wgpu-cli-2/src/: main.rs  shader.wgsl
firmware/: Building.md
firmware/firmware-makerpnpcontrolcore/: Cargo.toml  README.md  build.rs
firmware/firmware-makerpnpcontrolcore/.cargo/: config.toml
firmware/firmware-makerpnpcontrolcore/fpga-pac/: .gitignore  Cargo.toml  README.md  rebuild.sh
firmware/firmware-makerpnpcontrolcore/fpga-pac/patches/: 0001-delete-interrupt-block.patch  0002-delete-rt-block.patch  0003-octospi-fifo-bypass.patch  0004-add-ws2812_1.patch
firmware/firmware-makerpnpcontrolcore/fpga-pac/src/: lib.rs
firmware/firmware-stm32h743zi/: Cargo.toml  TODO.md  build.rs
ioboard/: Cargo.toml  rust-toolchain.toml
ioboard/firmware-stm32h743zi/: Cargo.toml  without_fliplink.txt
ioboard/firmware-stm32h743zi/.cargo/: config.toml
ioboard/ioboard-main/: Cargo.toml
ioboard/ioboard-main/src/: lib.rs  stepper.rs
ioboard/ioboard-net/: Cargo.toml
ioboard/ioboard-net-embassy/: Cargo.toml
ioboard/ioboard-net-embassy/src/: lib.rs
ioboard/ioboard-net/src/: lib.rs
ioboard/ioboard-shared/: Cargo.toml
ioboard/ioboard-shared/src/: commands.rs  lib.rs
ioboard/ioboard-time/: Cargo.toml
ioboard/ioboard-time/src/: lib.rs
ioboard/ioboard-trace/: Cargo.toml
ioboard/ioboard-trace/src/: lib.rs  tracepin.rs
ioboard/ioboard_main/: Cargo.toml
ioboard/ioboard_main/src/: lib.rs  stepper.rs
ioboard/ioboard_net/: Cargo.toml
ioboard/ioboard_net/src/: lib.rs
ioboard/ioboard_trace/: Cargo.toml
ioboard/ioboard_trace/src/: tracepin.rs
operator_ui/: Cargo.toml
operator_ui/operator_ui_egui/: Cargo.toml  README.md  index.html
operator_ui/operator_ui_egui/assets/: manifest.json  sw.js
operator_ui/operator_ui_egui/assets/translations/en-US/: translations.ftl
operator_ui/operator_ui_egui/assets/translations/es-ES/: translations.ftl
operator_ui/operator_ui_egui/src/: app.rs  config.rs  events.rs  fps_stats.rs  lib.rs  main.rs  net.rs  ui_commands.rs  ui_common.rs  workspace.rs
operator_ui/operator_ui_egui/src/app/: mod.rs
operator_ui/operator_ui_egui/src/app/ui/: camera.rs  controls.rs  diagnostics.rs  mod.rs  plot.rs  settings.rs  status.rs
operator_ui/operator_ui_egui/src/net/: camera.rs  commands.rs  services.rs  shutdown.rs
operator_ui/operator_ui_egui/src/runtime/: mod.rs
server/: BUILD.md  Cargo.toml  rust-toolchain.toml
server/assets/config/: development-machine-1.ron  development-machine-2.ron
server/server_cli/: Cargo.toml  build.rs
server/server_cli/src/: camera.rs  cli.rs  config.rs  main.rs
server/server_cli/src/camera/: mod.rs
server/server_cli/src/ioboard/: mod.rs
server/server_cli/src/networking/: mod.rs  sanity_tests.rs
server/server_cli/src/operator/: mod.rs
server/server_common/: Cargo.toml
server/server_common/src/: camera.rs
server/server_shared/: Cargo.toml
server/server_shared/src/: commands.rs
server/server_vision/: Cargo.toml
server/server_vision/src/: lib.rs  mediars_capture.rs  opencv_capture.rs
(+77 files in other folders)
