[workspace]
resolver = "3"

members = [
    "ioboard_shared",
    "operator_shared",
]

[workspace.dependencies]
operator_shared    = { path = "operator_shared" }
ioboard_shared     = { path = "ioboard_shared" }

# logging
log                = "0.4.27"
defmt              = "1.0.1"

# comms
ergot              = { path = "../libs/ergot/crates/ergot" }

# serialization
serde              = { version = "1.0.219", default-features = false }
postcard-schema    = { version = "0.2.5", features = ["derive"] }

# time
chrono             = { version = "0.4.42" }
