[workspace]
resolver = "3"

members = [
    "ioboard_main",
    "ioboard_net",
    "ioboard_trace",
]

[workspace.dependencies]
ioboard_shared     = { path = "../common/ioboard_shared" }

serde              = { version = "1.0.219", default-features = false }
postcard-schema    = { version = "0.2.5", features = ["derive"] }
static_cell        = "2.1.1"

# logging
log                = "0.4.28"
defmt              = "1.0.1"

mutex              = "1.0.2"

embassy-net        = { version = "0.9.1" }
embassy-time       = { version = "0.5.1" }
embassy-executor   = { version = "0.10.0" }
embassy-sync       = { version = "0.8.0" }
embassy-futures    = { version = "0.1.2" }

embedded-nal-async = { version = "0.9.0" }
embedded-io-async  = { version = "0.7.0" }

[patch.crates-io]
embassy-net = { git = "https://github.com/embassy-rs/embassy", rev = "f1c6bb7df80e592b7a7edc709f546771506806d3"}
embassy-time = { git = "https://github.com/embassy-rs/embassy", rev = "f1c6bb7df80e592b7a7edc709f546771506806d3"}
embassy-executor = { git = "https://github.com/embassy-rs/embassy", rev = "f1c6bb7df80e592b7a7edc709f546771506806d3"}
embassy-sync = { git = "https://github.com/embassy-rs/embassy", rev = "f1c6bb7df80e592b7a7edc709f546771506806d3"}
embassy-futures = { git = "https://github.com/embassy-rs/embassy", rev = "f1c6bb7df80e592b7a7edc709f546771506806d3"}
