[workspace]
resolver = "3"

members = [
    "ioboard_main",
    "ioboard_net",
    "ioboard_trace",
]

[workspace.dependencies]
ioboard_shared     = { path = "../common/ioboard_shared" }

serde              = { version = "1.0.219", default-features = false }
postcard-schema    = { version = "0.2.5", features = ["derive"] }
static_cell        = "2.1.1"

# logging
log                = "0.4.28"
defmt              = "1.0.1"

mutex              = "1.0.2"

embassy-net        = { version = "0.9.1" }
embassy-time       = { version = "0.5.1" }
embassy-executor   = { version = "0.10.0" }
embassy-sync       = { version = "0.8.0" }
embassy-futures    = { version = "0.1.2" }

embedded-nal-async = { version = "0.9.0" }
embedded-io-async  = { version = "0.7.0" }

[patch.crates-io]
embassy-net = { path = "../libs/embassy/embassy-net" }
embassy-time = { path = "../libs/embassy/embassy-time" }
embassy-executor = { path = "../libs/embassy/embassy-executor" }
embassy-sync = { path = "../libs/embassy/embassy-sync" }
embassy-futures = { path = "../libs/embassy/embassy-futures" }
