[workspace]
members = [
    "server_cli",
]
resolver = "2"

[workspace.dependencies]
ioboard-shared = { path = "../ioboard/ioboard-shared" }

cordyceps       = "0.3.4"
env_logger      = "0.11.8"
log             = "0.4.27"

ergot   = { path = "../libs/ergot/crates/ergot", features = ["tokio-std"] }
mutex   = { version = "1.0.0",  features = ["std", "impl-critical-section"] }
tokio   = { version = "1.45.1", features = ["macros", "net", "rt-multi-thread", "time", "io-util"] }
