[workspace]
resolver = "3"

members = [
    "server_cli",
    "server_shared",
]

[workspace.dependencies]
server_shared     = { path = "server_shared" }
ioboard-shared    = { path = "../ioboard/ioboard-shared" }

cordyceps         = "0.3.4"
env_logger        = "0.11.8"
log               = "0.4.27"

ergot             = { path = "../libs/ergot/crates/ergot", features = ["tokio-std"] }
mutex             = { version = "1.0.0",  features = ["std", "impl-critical-section"] }
tokio             = { version = "1.45.1", features = ["macros", "net", "rt-multi-thread", "time", "io-util"] }
serde             = { version = "1.0.219", default-features = false }
postcard-schema   = { version = "0.2.5", features = ["derive"] }
