[workspace]
resolver = "3"

members = [
    "server_cli",
    "server_common",
    "server_vision",
]

[workspace.dependencies]
operator_shared      = { path = "../common/operator_shared" }
ioboard_shared     = { path = "../common/ioboard_shared" }

# logging
env_logger         = "0.11.8"
log                = "0.4.27"

# errors
anyhow             = { version = "1.0.100" }

# comms
ergot              = { path = "../libs/ergot/crates/ergot", features = ["tokio-std"] }

# tasks
mutex              = { version = "1.0.0",  features = ["std", "impl-critical-section"] }
tokio              = { version = "1.45.1", features = ["macros", "net", "rt-multi-thread", "time", "io-util"] }

# serialization
serde              = { version = "1.0.219", default-features = false }
postcard-schema    = { version = "0.2.5", features = ["derive"] }
cordyceps          = "0.3.4"

# time
chrono          = { version = "0.4.42" }

# vision
opencv          = { version = "0.96.0" }
