[package]
name = "cameraclient-ergot"
version = "0.1.0"
edition = "2024"

[dependencies]
camerastreamer-ergot-shared = { path = "../camerastreamer-ergot-shared" }

eframe          = { version = "0.33.0" }
egui            = { version = "0.33.0" }
egui_plot       = { version = "0.34.0" }
image           = { version = "0.25.8" }
tokio           = { version = "1.48.0", features = ["full"] }
anyhow          = { version = "1.0.100" }
cordyceps       = { version = "0.3.4" }
env_logger      = { version = "0.11.8" }
log             = { version = "0.4.27" }
ergot           = { path = "../../libs/ergot/crates/ergot", features = ["tokio-std"] }
ctrlc = "3.5.1"
chrono = "0.4.42"
