[package]
name = "camerastreamer-ergot-shared"
version = "0.1.0"
edition = "2024"

[dependencies]
ergot           = { path = "../../libs/ergot/crates/ergot" }
postcard-schema = { version = "0.2.5", features = ["derive", "alloc"] }
serde           = { version = "1.0.219", default-features = false, features = ["derive", "alloc"] }
