[package]
name = "camerastreamer-ergot"
version = "0.1.0"
edition = "2024"

[dependencies]
camerastreamer-ergot-shared = { path = "../camerastreamer-ergot-shared" }

tokio           = { version = "1.48.0", features = ["full"] }
opencv          = { version = "0.96.0", features = ["videoio", "imgcodecs"] }
bytes           = { version = "1.10.1" }
anyhow          = { version = "1.0.100" }
cordyceps       = { version = "0.3.4" }
env_logger      = { version = "0.11.8" }
log             = { version = "0.4.27" }
ergot           = { path = "../../libs/ergot/crates/ergot", features = ["tokio-std"] }
chrono          = { version = "0.4.42" }
tokio-util      = { version = "0.7.17", features = ["rt"] }

#[profile.dev.package.opencv]
#opt-level = 3          # compile fully optimized
#debug = false          # disable debug info
#debug-assertions = false
#overflow-checks = false
