[package]
name = "ioboard-firmware-stm32h743zi"
version = "0.1.0"
edition = "2024"

[features]
default = ["tracepin"]

tracepin = ["ioboard-main/tracepin"]

[dependencies]
ioboard-main = { path = "../ioboard-main" }

embassy-stm32 = { version = "0.4.0", path = "../../libs/embassy/embassy-stm32", features = ["defmt", "stm32h743zi", "time-driver-any", "unstable-pac", "exti", "memory-x"] }
embassy-executor = { version = "0.9.0", path = "../../libs/embassy/embassy-executor", features = ["defmt", "arch-cortex-m", "executor-thread"] }
embassy-time = { version = "0.5.0", path = "../../libs/embassy/embassy-time", features = ["defmt", "defmt-timestamp-uptime", "tick-hz-32_768"] }
embassy-sync = { version = "0.7.2", path = "../../libs/embassy/embassy-sync", features = ["defmt"] }

defmt = "1.0.1"

defmt-rtt = "1.0.0"
cortex-m = {version = "0.7.7", features = ["critical-section-single-core"]}
cortex-m-rt = "0.7.0"
panic-probe = "1.0.0"
embedded-hal = "1.0.0"

[profile.release]
debug = 2

[package.metadata.embassy]
build = [
    { target = "thumbv7em-none-eabihf"}
]
