[package]
name = "ioboard-main"
version = "0.1.0"
edition = "2024"

[features]
default = ["tracepin"]
tracepin = []

[dependencies]
# IMPORTANT - we DO NOT depend on Embassy or any other runtime.

defmt = "1.0.1"
embedded-alloc = "0.6.0"
embedded-hal = "1.0.0"
embedded-hal-async = "1.0.0"
rsruckig = { version = "2.1.0", default-features = false, features = ["libm", "alloc"] }
libm = "0.2.15"
