[package]
name = "ioboard-main"
version = "0.1.0"
edition = "2024"

[features]

[dependencies]
ioboard-net = { path = "../ioboard-net" }
ioboard-time = { path = "../ioboard-time" }
ioboard-trace = { path = "../ioboard-trace" }

# IMPORTANT - we DO NOT depend on Embassy or any other runtime.

defmt = "1.0.1"
embedded-hal = "1.0.0"
embedded-hal-async = "1.0.0"
rsruckig = { version = "2.1.0", default-features = false, features = ["libm", "alloc"] }
libm = "0.2.15"

