[package]
name = "ioboard-net"
version = "0.1.0"
edition = "2024"

[features]

[dependencies]
ioboard-trace = { path = "../ioboard-trace" }
embedded-nal-async = "0.8.0"
embedded-io-async = "0.6.1"

embassy-net = { version = "0.7.1", path = "../../libs/embassy/embassy-net", features = ["defmt", "tcp", "dhcpv4", "medium-ethernet"] }
embassy-time = { version = "0.5.0", path = "../../libs/embassy/embassy-time", features = ["defmt", "defmt-timestamp-uptime"] }

static_cell = "2.1.1"

log = "0.4.28"
defmt = "1.0.1"
