[package]
name = "ioboard_main"
version = "0.1.0"
edition = "2024"

[features]

[dependencies]
ioboard_net        = { path = "../ioboard_net" }
ioboard_trace      = { path = "../ioboard_trace" }
embassy-time       = { version = "0.5.0", features = ["defmt", "defmt-timestamp-uptime"] }
#embassy-time      = { version = "0.5.0", path = "../../libs/embassy/embassy-time", features = ["defmt", "defmt-timestamp-uptime"] }

defmt              = "1.0.1"
rsruckig           = { version = "2.1.0", default-features = false, features = ["libm", "alloc"] }
libm               = "0.2.15"

