[package]
name = "ioboard_net"
version = "0.1.0"
edition = "2024"

[features]

[dependencies]
ioboard_trace      = { path = "../ioboard_trace" }
ioboard_shared     = { path = "../../common/ioboard_shared", features = ["defmt"] }
embedded-nal-async = { workspace = true }
embedded-io-async  = { workspace = true }

embassy-net        = { workspace = true, features = ["defmt", "tcp", "dhcpv4", "medium-ethernet"] }
embassy-time       = { workspace = true, features = ["defmt", "defmt-timestamp-uptime"] }
embassy-executor   = { workspace = true }
embassy-sync       = { workspace = true }
embassy-futures    = { workspace = true }

ergot              = { path = "../../libs/ergot/crates/ergot", features = ["embassy-net-v0_7"] }
mutex              = { workspace = true }
bbqueue           = { version = "0.7.0", default-features = false, features = ["critical-section", "maitake-sync-0_3"] }
heapless           = { version = "0.9", default-features = false }
postcard-schema    = { workspace = true, features = ["derive"] }
serde              = { workspace = true, default-features = false, features = ["derive"] }

static_cell = { workspace = true }
log = { workspace = true }
defmt = { workspace = true }
