[package]
name = "server_cli"
version = "0.1.0"
edition = "2024"

[dependencies]
operator_shared    = { workspace = true }
ioboard_shared     = { workspace = true }

cordyceps          = { workspace = true }
env_logger         = { workspace = true }
log                = { workspace = true }
ergot              = { workspace = true }
mutex              = { workspace = true }
tokio              = { workspace = true }
