[package]
name = "server_cli"
version = "0.1.0"
edition = "2024"

[features]
default = []

opencv-capture = [
    "server_common/opencv-capture",
    "server_vision/opencv-capture",
]
mediars-capture = [
    "server_common/mediars-capture",
    "server_vision/mediars-capture",
]

[dependencies]
operator_shared    = { workspace = true }
ioboard_shared     = { workspace = true }
server_vision      = { path = "../server_vision" }
server_common      = { path = "../server_common" }

# logging
env_logger         = { workspace = true }
log                = { workspace = true }

# errors
anyhow             = { workspace = true }

# comms
ergot              = { workspace = true }
cordyceps          = { workspace = true }

# tasks
mutex              = { workspace = true }
tokio              = { workspace = true }
tokio-util         = { workspace = true }
console-subscriber = { workspace = true }

# time
chrono             = { workspace = true, features = ["serde"]}
