[package]
name = "server_vision"
version = "0.1.0"
edition = "2024"

[features]
default = ["opencv-411"]

opencv-410 = [
    "dep:opencv"
]

opencv-411 = [
    "dep:opencv"
]

opencv-capture = [
    "opencv/videoio",
    "dep:opencv",
]
mediars-capture = [
    "dep:media"
]

[dependencies]
server_common      = { path = "../server_common"}

# logging
log                = { workspace = true }

# errors
anyhow             = { workspace = true }

# time
chrono             = { workspace = true}

# video
media            = { git = "https://github.com/MakerPnP/media-rs", rev = "3a0529d23475f230445b3091ab7b52f401c774dd", optional = true }

# machine-vision
opencv             = { workspace = true, features = ["imgcodecs", "imgproc", "objdetect"], default-features = false, optional = true}


# tasks
tokio              = { workspace = true }
tokio-util         = { workspace = true }
