[package]
name = "server_vision"
version = "0.1.0"
edition = "2024"

[features]
linux = [
    # required to avoid compilation error: "a `libclang` shared library is not loaded on this thread"
    "opencv/clang-runtime"
]

opencv-410 = [
    "dep:opencv"
]

opencv-411 = [
    "dep:opencv"
]

opencv-capture = [
    "opencv/videoio",
    "dep:opencv",
]
mediars-capture = [
    "dep:media"
]

[dependencies]
server_common      = { path = "../server_common"}

# logging
log                = { workspace = true }

# errors
anyhow             = { workspace = true }

# time
chrono             = { workspace = true}

# video
media              = { workspace = true, optional = true }

# machine-vision
opencv             = { workspace = true, features = ["imgcodecs", "imgproc", "objdetect"], default-features = false, optional = true}


# tasks
tokio              = { workspace = true }
tokio-util         = { workspace = true }
